--- a/history.yml
+++ b/history.yml
@@ -1,22 +1,22 @@
 ---
 valuation: |+
-  data: {"current":57,"last":20,"id":"valuation","updatedAt":1453420251}
+  data: {"current":99,"last":79,"id":"valuation","updatedAt":1453420674}
 
 karma: |+
-  data: {"current":113228,"last":44877,"id":"karma","updatedAt":1453420251}
+  data: {"current":154919,"last":196265,"id":"karma","updatedAt":1453420674}
 
 synergy: |+
-  data: {"value":79,"id":"synergy","updatedAt":1453420251}
+  data: {"value":57,"id":"synergy","updatedAt":1453420674}
 
 buzzwords: |+
-  data: {"items":[{"label":"Paradigm shift","value":2},{"label":"Pivoting","value":1},{"label":"Synergy","value":10},{"label":"Exit strategy","value":5},{"label":"Enterprise","value":1},{"label":"Streamlininess","value":4},{"label":"Leverage","value":1},{"label":"Web 2.0","value":2}],"id":"buzzwords","updatedAt":1453420251}
+  data: {"items":[{"label":"Turn-key","value":3},{"label":"Paradigm shift","value":3},{"label":"Enterprise","value":1},{"label":"Pivoting","value":3},{"label":"Exit strategy","value":1},{"label":"Synergy","value":2},{"label":"Streamlininess","value":2},{"label":"Web 2.0","value":1},{"label":"Leverage","value":1}],"id":"buzzwords","updatedAt":1453420674}
 
 convergence: |+
-  data: {"points":[{"x":27,"y":34},{"x":28,"y":9},{"x":29,"y":35},{"x":30,"y":16},{"x":31,"y":17},{"x":32,"y":31},{"x":33,"y":37},{"x":34,"y":36},{"x":35,"y":42},{"x":36,"y":32}],"id":"convergence","updatedAt":1453420251}
+  data: {"points":[{"x":17,"y":19},{"x":18,"y":36},{"x":19,"y":29},{"x":20,"y":38},{"x":21,"y":9},{"x":22,"y":40},{"x":23,"y":22},{"x":24,"y":26},{"x":25,"y":34},{"x":26,"y":18}],"id":"convergence","updatedAt":1453420672}
 
 taskservice: |+
-  data: {"value":0,"id":"taskservice","updatedAt":1453420230}
+  data: {"value":0,"id":"taskservice","updatedAt":1453420671}
 
 upstream: |+
-  data: {"value":31,"id":"upstream","updatedAt":1453420230}
+  data: {"value":33,"id":"upstream","updatedAt":1453420671}
 
