--- a/history.yml
+++ b/history.yml
@@ -1,22 +1,22 @@
 ---
 valuation: |+
-  data: {"current":30,"last":96,"id":"valuation","updatedAt":1453425765}
+  data: {"current":83,"last":51,"id":"valuation","updatedAt":1453425957}
 
 karma: |+
-  data: {"current":152094,"last":121163,"id":"karma","updatedAt":1453425765}
+  data: {"current":147105,"last":177562,"id":"karma","updatedAt":1453425957}
 
 synergy: |+
-  data: {"value":34,"id":"synergy","updatedAt":1453425765}
+  data: {"value":80,"id":"synergy","updatedAt":1453425957}
 
 buzzwords: |+
-  data: {"items":[{"label":"Web 2.0","value":4},{"label":"Leverage","value":11},{"label":"Pivoting","value":8},{"label":"Paradigm shift","value":4},{"label":"Turn-key","value":14},{"label":"Streamlininess","value":3},{"label":"Enterprise","value":12},{"label":"Synergy","value":6},{"label":"Exit strategy","value":11}],"id":"buzzwords","updatedAt":1453425765}
+  data: {"items":[{"label":"Streamlininess","value":6},{"label":"Synergy","value":10},{"label":"Web 2.0","value":6},{"label":"Exit strategy","value":5},{"label":"Paradigm shift","value":4},{"label":"Enterprise","value":9},{"label":"Pivoting","value":5},{"label":"Leverage","value":6},{"label":"Turn-key","value":3}],"id":"buzzwords","updatedAt":1453425957}
 
 convergence: |+
-  data: {"points":[{"x":74,"y":8},{"x":75,"y":29},{"x":76,"y":27},{"x":77,"y":37},{"x":78,"y":21},{"x":79,"y":32},{"x":80,"y":9},{"x":81,"y":27},{"x":82,"y":9},{"x":83,"y":36}],"id":"convergence","updatedAt":1453425765}
+  data: {"points":[{"x":54,"y":2},{"x":55,"y":26},{"x":56,"y":6},{"x":57,"y":18},{"x":58,"y":0},{"x":59,"y":37},{"x":60,"y":9},{"x":61,"y":13},{"x":62,"y":10},{"x":63,"y":19}],"id":"convergence","updatedAt":1453425956}
 
 taskservice: |+
-  data: {"value":0,"startAtValue":"21 Jan 2016 at 07:44PM","urlValue":"https://ci.jenkins-ci.org/job/infra_accountapp/22/","id":"taskservice","updatedAt":1453425739}
+  data: {"value":0,"startAtValue":"21 Jan 2016 at 07:44PM","urlValue":"https://ci.jenkins-ci.org/job/infra_accountapp/22/","id":"taskservice","updatedAt":1453425940}
 
 upstream: |+
-  data: {"value":60,"startAtValue":"22 Jan 2016 at 12:12AM","urlValue":"https://builds.apache.org/job/Hadoop-ATS-v2/2/","id":"upstream","updatedAt":1453425740}
+  data: {"value":61,"startAtValue":"22 Jan 2016 at 12:12AM","urlValue":"https://builds.apache.org/job/Hadoop-ATS-v2/2/","id":"upstream","updatedAt":1453425940}
 
