--- a/history.yml
+++ b/history.yml
@@ -1,22 +1,22 @@
 ---
 valuation: |+
-  data: {"current":83,"last":51,"id":"valuation","updatedAt":1453425957}
+  data: {"current":51,"last":19,"id":"valuation","updatedAt":1453428093}
 
 karma: |+
-  data: {"current":147105,"last":177562,"id":"karma","updatedAt":1453425957}
+  data: {"current":48816,"last":41589,"id":"karma","updatedAt":1453428093}
 
 synergy: |+
-  data: {"value":80,"id":"synergy","updatedAt":1453425957}
+  data: {"value":66,"id":"synergy","updatedAt":1453428093}
 
 buzzwords: |+
-  data: {"items":[{"label":"Streamlininess","value":6},{"label":"Synergy","value":10},{"label":"Web 2.0","value":6},{"label":"Exit strategy","value":5},{"label":"Paradigm shift","value":4},{"label":"Enterprise","value":9},{"label":"Pivoting","value":5},{"label":"Leverage","value":6},{"label":"Turn-key","value":3}],"id":"buzzwords","updatedAt":1453425957}
+  data: {"items":[{"label":"Exit strategy","value":18},{"label":"Pivoting","value":21},{"label":"Enterprise","value":20},{"label":"Leverage","value":22},{"label":"Paradigm shift","value":29},{"label":"Streamlininess","value":18},{"label":"Web 2.0","value":11},{"label":"Synergy","value":6},{"label":"Turn-key","value":18}],"id":"buzzwords","updatedAt":1453428093}
 
 convergence: |+
-  data: {"points":[{"x":54,"y":2},{"x":55,"y":26},{"x":56,"y":6},{"x":57,"y":18},{"x":58,"y":0},{"x":59,"y":37},{"x":60,"y":9},{"x":61,"y":13},{"x":62,"y":10},{"x":63,"y":19}],"id":"convergence","updatedAt":1453425956}
+  data: {"points":[{"x":434,"y":9},{"x":435,"y":34},{"x":436,"y":37},{"x":437,"y":36},{"x":438,"y":42},{"x":439,"y":44},{"x":440,"y":23},{"x":441,"y":4},{"x":442,"y":32},{"x":443,"y":10}],"id":"convergence","updatedAt":1453428093}
 
 taskservice: |+
-  data: {"value":0,"startAtValue":"21 Jan 2016 at 07:44PM","urlValue":"https://ci.jenkins-ci.org/job/infra_accountapp/22/","id":"taskservice","updatedAt":1453425940}
+  data: {"value":0,"startAtValue":"21 Jan 2016 at 07:44PM","urlValue":"https://ci.jenkins-ci.org/job/infra_accountapp/22/","healthStateValue":-1,"id":"taskservice","updatedAt":1453428082}
 
 upstream: |+
-  data: {"value":61,"startAtValue":"22 Jan 2016 at 12:12AM","urlValue":"https://builds.apache.org/job/Hadoop-ATS-v2/2/","id":"upstream","updatedAt":1453425940}
+  data: {"value":72,"startAtValue":"22 Jan 2016 at 12:12AM","urlValue":"https://builds.apache.org/job/Hadoop-ATS-v2/2/","healthStateValue":0,"id":"upstream","updatedAt":1453428082}
 
