--- a/history.yml
+++ b/history.yml
@@ -1,22 +1,28 @@
 ---
 valuation: |+
-  data: {"current":60,"last":29,"id":"valuation","updatedAt":1453457581}
+  data: {"current":78,"last":61,"id":"valuation","updatedAt":1453458164}
 
 karma: |+
-  data: {"current":45739,"last":189575,"id":"karma","updatedAt":1453457581}
+  data: {"current":84049,"last":79485,"id":"karma","updatedAt":1453458164}
 
 synergy: |+
-  data: {"value":59,"id":"synergy","updatedAt":1453457581}
+  data: {"value":15,"id":"synergy","updatedAt":1453458164}
 
 buzzwords: |+
-  data: {"items":[{"label":"Exit strategy","value":28},{"label":"Synergy","value":23},{"label":"Turn-key","value":29},{"label":"Paradigm shift","value":22},{"label":"Enterprise","value":1},{"label":"Pivoting","value":13},{"label":"Web 2.0","value":2},{"label":"Leverage","value":2},{"label":"Streamlininess","value":16}],"id":"buzzwords","updatedAt":1453457581}
+  data: {"items":[{"label":"Pivoting","value":3},{"label":"Synergy","value":2},{"label":"Web 2.0","value":2},{"label":"Streamlininess","value":2},{"label":"Leverage","value":4},{"label":"Paradigm shift","value":2},{"label":"Enterprise","value":2}],"id":"buzzwords","updatedAt":1453458164}
 
 convergence: |+
-  data: {"points":[{"x":797,"y":30},{"x":798,"y":25},{"x":799,"y":13},{"x":800,"y":48},{"x":801,"y":24},{"x":802,"y":42},{"x":803,"y":31},{"x":804,"y":35},{"x":805,"y":46},{"x":806,"y":35}],"id":"convergence","updatedAt":1453457581}
+  data: {"points":[{"x":17,"y":41},{"x":18,"y":27},{"x":19,"y":40},{"x":20,"y":20},{"x":21,"y":33},{"x":22,"y":40},{"x":23,"y":40},{"x":24,"y":13},{"x":25,"y":36},{"x":26,"y":18}],"id":"convergence","updatedAt":1453458163}
 
 taskservice: |+
-  data: {"value":27,"startAtValue":"22 Jan 2016 at 07:31AM","urlValue":"https://ci.jenkins-ci.org/job/infra_backend-war-size-tracker/1192/","healthStateValue":0,"healthStateChangedValue":false,"id":"taskservice","updatedAt":1453457578}
+  data: {"value":100,"startAtValue":"21 Jan 2016 at 09:33PM","urlValue":"http://build7:8080/job/task-master-heartbeat/186/","healthStateValue":0,"healthStateChangedValue":false,"id":"taskservice","updatedAt":1453462285}
 
 upstream: |+
-  data: {"value":0,"startAtValue":"22 Jan 2016 at 12:12AM","urlValue":"https://builds.apache.org/job/Hadoop-ATS-v2/2/","healthStateValue":-1,"healthStateChangedValue":false,"id":"upstream","updatedAt":1453457555}
+  data: {"value":100,"startAtValue":"21 Jan 2016 at 10:55PM","urlValue":"http://build7:8080/job/upstream-master-heartbeat/1693/","healthStateValue":0,"healthStateChangedValue":false,"id":"upstream","updatedAt":1453462284}
+
+taskservice_integration: |+
+  data: {"value":0,"startAtValue":"21 Jan 2016 at 01:35PM","urlValue":"http://build7:8080/job/task-master-integration-test/208/","healthStateValue":-1,"healthStateChangedValue":true,"id":"taskservice_integration","updatedAt":1453462245}
+
+upstream_integration: |+
+  data: {"value":0,"startAtValue":"14 Jan 2016 at 01:59PM","urlValue":"http://build7:8080/job/upstream-master-int-tests-remote-docker/131/","healthStateValue":-1,"healthStateChangedValue":true,"id":"upstream_integration","updatedAt":1453462244}
 
