Introduce utils module. Introduce synchronized map. Update gilab to have separate jobs for update jobs and fetch data

--- a/lib/setup.rb.example
+++ b/lib/setup.rb.example
@@ -14,7 +14,8 @@ module Setup
             :server => 'https://gitlab.com',
             :user => 'Nrcq_osny8cW8ZdgFst3',
             :projects => [785506, 778249],
-            :update_per_mr_seconds => 30
+            :delay_fetch_per_project_sec => 30,
+            :delay_update_ui_per_mr_sec => 10,
         }
     }
   end
